Changelog
=========

Collage 1.2.0 trunk (unreleased)
--------------------------------

https://svn.plone.org/collective/Products.Collage/trunk/

* Renderer: if a layout is defined on a canonical object, but not
  on a translation, now the canonical version's layout setting
  is used for the translation rather than the default. (Language
  versions should look the same unless explicitly defined otherwise.)
  [thomasw]

* Added Basque (eu) and Spanish (es) translations.
  [erral]

* Added safety belt to GenericSetup upgrade scripts.
  [glenfant]

* Added translation entries for new boolean in Collage.
  [glenfant]

* Collage subcontents indexing is now an option, since a Collage
  object may be irrelevant in search results (i.e: a Collage with
  only File contents).
  [glenfant]

* Added utilities.getFSVersionTuple that may help Collage extension
  components (add skins, content type support, ...)
  [glenfant]

* version.txt is major.minor.bugfix-[beta] to get synch with
  metadata.xml/version (when upgrade step required) and complying
  getFSVersionTuple above
  [glenfant]

* Add missing event-related translation.
  [kdeldycke]

Collage 1.2.0 beta 3 (2008-08-15)
---------------------------------

https://svn.plone.org/collective/Products.Collage/tags/1.2b3

* Packaged as a python egg and released on pypi.
  [davisagli]

* Renamed builtin portlet skins and gave minimum CSS to them.
  [glenfant]

* Re-using ATContentTypes.content.schemata.ATContentTypesSchema and
  removing copied/pasted portions of code in our schema definitions.
  [glenfant]

* Removed CMF skins layer "Collage" and spreaded its stuffs in Zope 3
  style browser resources and pages (CSS). Added an upgrade step for
  this.
  [glenfant]

* Using the MessageFactory for labels and descriptions in
  schemas. Code is more compact and i18ndude friendly.
  [glenfant]

* Added unit tests for utilities.
  [glenfant]


Collage 1.2.0 beta 2
--------------------
