@@ -6,6 +6,10 @@ Collage 1.2.0 trunk (unreleased)
 
 https://svn.plone.org/collective/Products.Collage/trunk/
 
+* Collage is now LinguaPlone compatible and therefore Collage elements
+  are now translatable.
+  [erral]
+
 * Renderer: if a layout is defined on a canonical object, but not
   on a translation, now the canonical version's layout setting
   is used for the translation rather than the default. (Language
